--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="slide-bg" data-background="assets/images/banner/banner-image3.jpg"></div>
+                        <div class="slide-bg" data-background="assets/images/banner/banner-image3.JPG"></div>
                         <div class="container">
                             <div class="banner-two__content">
                                 <h4 data-animation="fadeInUp" data-delay=".3s" style="font-size: 30px;">Change The World Together</h4>
