--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         <form onsubmit="setUserName(); return false;">
             <label for="username" style="color: black;">Entrez votre nom : </label>
             <input type="text" id="username" required style="color: black;" />
-            <button type="submit" style="color: black;">Soumettre</button>
+            <button type="submit" style="color: black;background-color: bisque;border-radius: 20%;">Soumettre</button>
         </form>
     </div>
 
